# LLM-voice-over-of-text

./: .dockerignore  .gitignore  README.md  docker-compose.yml
Docker-build/: Dockerfile0  Dockerfile1
my_project/: .env.template  .gitignore  TODO.md  bot_main.py  git  main.py  main_tw.py  main_tw_async.py  new_bot.py  pyproject.toml  rr.py  testing_project.py
my_project/core/: config.py  constants.py
my_project/core/model/: __init__.py  commands_stt.py  load_model_en.py  load_model_text.py  stt.py  tran.py  tts.py
my_project/dependencies/loading_dependencies/: __init__.py  load_model.py  load_model_en.py  load_model_text.py
my_project/tests/: test_commands.py  test_translate_text.py
my_project/utils/: smile_data.py  translate_text.py  translite.py
