[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python=">=3.14, <3.15"
silero = "^0.5.2"
vosk = "^0.3.45"
sounddevice = "^0.5.3"
fuzzywuzzy = "^0.18.0"
numpy = "^2.4.1"
pydantic-settings = "^2.12.0"
twitchio = "<2.0.0"
scipy = "^1.17.0"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)"
]
