[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python=">=3.11, <3.15"
silero = "^0.5.2"
vosk = "^0.3.45"
sounddevice = "^0.5.3"
fuzzywuzzy = "^0.18.0"
pydantic-settings = "^2.12.0"
twitchio = "<2.0.0"
transformers = "^4.57.6"
soundfile = "^0.13.1"
fishaudio = "^0.0.5"
sentencepiece = "^0.2.1"


[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)"
]

[tool.poetry.group.torch.dependencies]
torch = {version = "2.7.1+cu128", source = "pytorch"}
torchvision = {version = "0.22.1+cu128", source = "pytorch"}
torchaudio = {version = "2.7.1+cu128", source = "pytorch"}

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"